--- a/css/main.css
+++ b/css/main.css
@@ -2686,4 +2686,24 @@ hn {
             background-position: center;
         }
     }
+	
+	img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.portrait {
+    height: 80px;
+    width: 30px;
+}
+
+.landscape {
+    height: 30px;
+    width: 80px;
+}
+
+.square {
+    height: 75px;
+    width: 75px;
+}
 }
